[package]
name = "adGuardHomeYoutube"
version = "0.1.0"
edition = "2024"
description = "Web API to control YouTube blocking in AdGuard Home"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"  # Add this dependency
anyhow = "1.0.98"

# Web framework
axum = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

# Error handling
thiserror = "1.0.56"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Utilities
once_cell = "1.19.0"
futures = "0.3.30"