[package]
name = "adGuardHomeYoutube"
version = "0.1.0"
edition = "2024"
description = "Web API to control YouTube blocking in AdGuard Home"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "cookies", "gzip"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.3.1"  # Add this dependency
anyhow = "1.0.98"

# Web framework
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

# Error handling
thiserror = "2.0.12"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Utilities
once_cell = "1.19.0"
futures = "0.3.30"

rumqttc = { version = "0.24.0", features = [] }
uuid = { version = "1.3", features = ["v4"] }